--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,17 @@
+:root{
+  --color-prueba: #282c34;
+  --height-nav: 30px;
+}
 body {
+  color: #fff;
   margin: 0;
+  padding-top: calc(var(--height-nav) + 40px);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-prueba);
 }
 
 code {
