--- a/client/src/Styles/Home.css
+++ b/client/src/Styles/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: calc(var(--height-nav) + 40px);
 }
 .hr{
     width: 100%;
