--- a/client/src/Styles/Home.css
+++ b/client/src/Styles/Home.css
@@ -2,8 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: calc(var(--height-nav) + 40px);
 }
 .hr{
     width: 100%;
+}
+
+.contain-orderFilter{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
+    width: 90%;
+    margin: 30px 0;
 }
