--- a/client/src/Styles/Nav.css
+++ b/client/src/Styles/Nav.css
@@ -1,8 +1,7 @@
 nav{
     display: flex;
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -25,7 +24,7 @@ nav{
 .inputSearch{
     position: relative;
 }
-input{
+.inputSearch{
     border: solid 1.5px #9e9e9e;
     border-radius: 1rem;
     background: none;
@@ -34,7 +33,7 @@ input{
     color: #f5f5f5;
     transition: 150ms cubic-bezier(0.4,0,0.2,1);
 }
-label{
+.labelSearch{
     position: absolute;
     left: 16px;
     color: #8898af;
@@ -43,12 +42,12 @@ label{
     transition: 150ms cubic-bezier(0.4,0,0.2,1);
 }
 
-input:focus{
+.inputSearch:focus{
     outline: none;
     border: 1.5px solid #1a73e8;
 }
 
-input:focus ~ label {
+.inputSearch:focus ~ label {
     transform: translateY(-50%) scale(0.8) translateX(5rem);
     background-color: var(--color-prueba);
     padding: 0 0.2em;
