--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,14 @@
+*{
+  box-sizing: border-box;
+}
+
 :root{
   --color-prueba: #282c34;
-  --height-nav: 30px;
+  --height-nav: 70px;
 }
 body {
   color: #fff;
   margin: 0;
-  /* padding-top: calc(var(--height-nav) + 40px); */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
