--- a/client/src/Styles/Home.css
+++ b/client/src/Styles/Home.css
@@ -6,13 +6,43 @@
 .hr{
     width: 100%;
 }
+.divPages{
+    width: 100%;
+    display: flex;
+}
 
 .contain-orderFilter{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 4rem;
     width: 90%;
     margin: 30px 0;
+}
+
+.contentRecipes{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media (min-width: 600px) {
+    .containerHome{
+        width: 100%;
+    }
+    .divPages{
+        justify-content: flex-end;
+    }
+    .contentRecipes{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 40px;
+    }
+    .contain-orderFilter{
+        justify-content: center;
+        align-items: center;
+    }
 }
