--- a/client/src/Styles/Nav.css
+++ b/client/src/Styles/Nav.css
@@ -5,14 +5,12 @@ nav{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: var(--height-nav);
+    height: 70px;
     padding: 20px 10px;
-    background-color: var(--color-prueba);
+    background-color: #000C11;
+    z-index: 1000;
 }
-/* .containAtNav{
-    display: flex;
-    flex-direction: column;
-} */
+
 .iconHome{
     position: absolute;
     top: 15px;
@@ -21,35 +19,74 @@ nav{
     height: 40px;
     width: auto;
 }
-.inputSearch{
-    position: relative;
-}
-.inputSearch{
-    border: solid 1.5px #9e9e9e;
-    border-radius: 1rem;
-    background: none;
-    padding: .6rem;
-    font-size: 1rem;
-    color: #f5f5f5;
-    transition: 150ms cubic-bezier(0.4,0,0.2,1);
-}
-.labelSearch{
-    position: absolute;
-    left: 16px;
-    color: #8898af;
-    pointer-events: none;
-    transform: translateY(.5rem) translateX(7rem);
-    transition: 150ms cubic-bezier(0.4,0,0.2,1);
-}
-
-.inputSearch:focus{
+.input {
+    line-height: 28px;
+    border: 2px solid transparent;
+    border-bottom-color: #777;
+    padding: .2rem 0;
     outline: none;
-    border: 1.5px solid #1a73e8;
+    background-color: transparent;
+    color: #fff;
+    transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
+   }
+   
+   .input:focus {
+    outline: none;
+    padding: .2rem 1rem;
+    border-radius: 1rem;
+    border-color: #bac0c8;
+   }
+   .input:hover{
+    outline: none;
+    padding: .2rem 1rem;
+    border-radius: 1rem;
+    border-color: #bac0c8;
+   }
+   
+   .input::placeholder {
+    color: #777;
+   }
+   
+   .input:focus::placeholder {
+    opacity: 0;
+    transition: opacity .3s;
+   }
+   
+
+.btnPost{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 2.7rem;
+    font-size: 12px;
+    padding: 2px 30px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 1px 1px #9e9e9e;
+}
+.btnPost:hover{
+    box-shadow: 0px 0px 2px 2px #9e9e9e;
+    cursor: pointer;
+}
+.link-create{
+    position: absolute;
+    right: 6px;
+    color: #fff;
+    text-decoration: none;
 }
 
-.inputSearch:focus ~ label {
-    transform: translateY(-50%) scale(0.8) translateX(5rem);
-    background-color: var(--color-prueba);
-    padding: 0 0.2em;
-    color: #2196f3;
+@media (min-width: 600px){
+    .input{
+        width: 15rem;
+        padding: 7.1;
+    }
+    .btnPost{
+        width: 3.7rem;
+        padding: 3px 40px;
+        font-size: 15px;
+    }
+    .link-create{
+        right: 40px;
+    }
 }
