--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,25 @@
 *{
   box-sizing: border-box;
 }
-
-:root{
-  --color-prueba: #282c34;
-  --height-nav: 70px;
+html{
+  scroll-behavior: smooth;
 }
 body {
-  color: #fff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-prueba);
+  color: #fff;
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)),
+    url(https://images-ext-2.discordapp.net/external/GJ4FWii8tJOB65uRimpxBg8iULHbxDW7ohtfHl-lcuQ/https/i.pinimg.com/originals/e4/fe/32/e4fe327ee0ab8db0d917c7b5f6bf2373.jpg);
+  background-repeat: no-repeat;
+  background-clip: content-box;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 code {
