--- a/client/src/Components/Filter/Filter.css
+++ b/client/src/Components/Filter/Filter.css
@@ -1,12 +1,12 @@
-.contain-filter{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
+.contain-filter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
 }
-.filter{
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #fffa;
-    font-weight: bold;
+.filter {
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  font-weight: bold;
 }
