--- a/client/src/Components/LandingPage/LandingPage.css
+++ b/client/src/Components/LandingPage/LandingPage.css
@@ -1,38 +1,52 @@
-.landing-page{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5),
-        rgba(0, 0, 0, 0.5)),
-        url(https://i.pinimg.com/564x/97/ab/44/97ab44632182be48081196273e061e66.jpg);
+.landing-page {
+  width: 100%;
+  height: 92.8vh;
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(https://i.pinimg.com/564x/97/ab/44/97ab44632182be48081196273e061e66.jpg);
 }
-.title-landing{
-    font-size: 6rem;
-    text-shadow: -10px 10px 8px #777;
-    transform: translateX(170px) translateY(150px);
+.titleLanding {
+  display: flex;
+  padding: 80px;
+  font-size: 6rem;
+  text-shadow: -10px 10px 8px #777;
 }
-.btn-getHome{
-    width: 17rem;
-    height: 5rem;
-    position: absolute;
-    left: 1200px;
-    top: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    transition: all .4s;
-    padding: 0 30px;
-    font-size: 2rem;
-    text-decoration: none;
-    color: #eee;
-    border-radius: 20px;
-    background-color: #fff6;
+.contentBtn {
+  display: flex;
+  padding: 50px 20%;
+  justify-content: flex-end;
+}
+.btnGetHome {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: all 0.4s;
+  padding: 20px 30px;
+  font-size: 2rem;
+  text-decoration: none;
+  color: #eee;
+  border-radius: 30px;
+  background-color: #fff6;
 }
 
-.btn-getHome:hover{
-    background-color: #fffc;
-    box-shadow: 0 0 20px 1px #aaa;
-    color: #444;
-    width: 20rem;
+.btnGetHome:hover {
+  background-color: #fffc;
+  box-shadow: 0 0 20px 1px #aaa;
+  color: #444;
+  padding-right: 60px;
+}
+
+@media (max-width: 750px) {
+  .titleLanding {
+    padding: 80px 20px;
+    font-size: 3rem;
+  }
+  .contentBtn {
+    padding: 50px 40px;
+  }
+  .btnGetHome {
+    padding: 20px 30px;
+    border-radius: 20px;
+    font-size: 1.3rem;
+  }
 }
