--- a/client/src/Styles/App.css
+++ b/client/src/Styles/App.css
@@ -7,6 +7,6 @@
   justify-content: center;
   align-items: center;
   text-align: center; */
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
